# my-my-lboro

./: .env  .gitignore  Dockerfile  README.md  config.py  convert_to_ical.py  main.py  my_lboro.py  my_lboro_types.py  pyproject.toml  test.py
.github/workflows/: build-and-push.yaml
development/: docker-compose.yaml
production/: .env example  docker-compose.yaml
