[project]
name = "my-my-lboro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "ics>=0.7.2",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.12.0",
    "requests>=2.32.5",
    "starlette>=0.50.0",
    "uvicorn>=0.38.0",
]
